# tqs

./: .gitignore  AGENT.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  USAGE.md  dist-workspace.toml  plan.md  release.toml  tqs_design_refined.md  tqs_v2_cli_contract.md  tqs_v2_design.md  tqs_v2_roadmap.md  tqs_v2_template_and_vault_layout.md  tsq.md
.github/workflows/: ci.yml  release.yml
.tickets/: tqs-2ssh.md  tqs-8pl4.md  tqs-apgz.md  tqs-azhx.md  tqs-fjpk.md  tqs-l6w2.md  tqs-liel.md  tqs-lrdy.md  tqs-oq3n.md  tqs-r8c7.md  tqs-sg15.md  tqs-t64b.md  tqs-txb9.md  tqs-z5ob.md
docs/todos/: README.md  add-default-source-not-manual.md  config-storage-model-mismatch.md  daily-note-link-format-mismatch.md  doc-conflict-obsidian-vs-filesystem-first.md  doc-conflict-template-default.md  doctor-config-scope-too-narrow.md  edit-updates-metadata-without-content-change.md  find-missing-structured-flags.md  list-missing-filter-flags.md
docs/v2/: cli-contract.md  implementation-plan.md  overview.md  storage-and-layout.md
scripts/: release.sh
src/: lib.rs  main.rs  test_support.rs
src/app/: app_error.rs  mod.rs  operations.rs  service.rs
src/cli/: args.rs  fuzzy.rs  handlers.rs  mod.rs
src/data/: adjectives.txt  nouns.txt
src/domain/: filter.rs  id.rs  mod.rs  task.rs
src/io/: input.rs  mod.rs  output.rs  picker.rs
src/storage/: config.rs  daily_notes.rs  doctor.rs  editor.rs  format.rs  id_state.rs  mod.rs  repo.rs  root.rs
src/tui/: actions.rs  app_state.rs  event.rs  mod.rs  ui.rs
tests/: cli_smoke.rs  regression.rs
(+27 files in other folders)
