[package]
name = "tqs"
version = "0.1.1"
edition = "2024"
description = "Terminal task queue CLI with Markdown/YAML-backed tasks"
repository = "https://github.com/andreabergia/tqs"
homepage = "https://github.com/andreabergia/tqs"

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
fuzzy-matcher = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
shell-words = "1"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
